# ncb-tts-r2

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Jenkinsfile  LICENSE  docker-compose.yml
.github/workflows/: build.yml
manifest/: ncb-tts.yaml  pvc.yaml
src/: config.rs  connection_monitor.rs  data.rs  errors.rs  event_handler.rs  lib.rs  main.rs  stream_input.rs  trace.rs  utils.rs
src/commands/: config.rs  mod.rs  setup.rs  skip.rs  stop.rs
src/database/: database.rs  dictionary.rs  mod.rs  server_config.rs  user_config.rs
src/events/: message_receive.rs  mod.rs  ready.rs  voice_state_update.rs
src/implement/: member_name.rs  message.rs  mod.rs  voice_move_state.rs
src/interactions/: mod.rs  utils.rs
src/interactions/buttons/: autostart_channel.rs  config_toggles.rs  dictionary_management.rs  mod.rs  navigation.rs  voicevox_config.rs
src/interactions/commands/: mod.rs
src/interactions/modals/: dictionary.rs  mod.rs
src/interactions/select_menus/: autostart_channels.rs  dictionary.rs  mod.rs  tts_config.rs
src/tts/: config.rs  instance.rs  message.rs  mod.rs  tts.rs  tts_type.rs  validator.rs
src/tts/gcp_tts/: gcp_tts.rs  mod.rs
src/tts/gcp_tts/structs/: audio_config.rs  mod.rs  synthesis_input.rs  synthesize_request.rs  synthesize_response.rs  voice_selection_params.rs
src/tts/toriel/: mod.rs  toriel.rs
src/tts/voicevox/: mod.rs  voicevox.rs
src/tts/voicevox/structs/: accent_phrase.rs  audio_query.rs  mod.rs  mora.rs  speaker.rs  stream.rs
