[package]
name = "ncb-tts-r2"
version = "1.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = "1.0"
toml = "0.8.19"
gcp_auth = "0.12.3"
reqwest = { version = "0.12.9", features = ["json"] }
base64 = "0.22.1"
async-trait = "0.1.57"
redis = "*"
regex = "1"
poise = "0.6.1"

[dependencies.uuid]
version = "1.11.0"
features = ["serde", "v4"]

[dependencies.songbird]
version = "0.4.4"
features = ["builtin-queue"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]
