[package]
name = "ncb-tts-r2"
version = "1.10.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = "1.0"
toml = "0.5"
gcp_auth = "0.5.0"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.13"
async-trait = "0.1.57"
redis = "0.29.2"
regex = "1"
tracing-subscriber = "0.3.19"
lru = "0.13.0"
tracing = "0.1.41"
opentelemetry_sdk = { version = "0.29.0", features = ["trace"] }
opentelemetry = "0.29.1"
opentelemetry-semantic-conventions = "0.29.0"
opentelemetry-otlp = { version = "0.29.0", features = ["grpc-tonic"] }
opentelemetry-stdout = "0.29.0"
tracing-opentelemetry = "0.30.0"
symphonia-core = "0.5.4"
tokio-util = { version = "0.7.14", features = ["compat"] }
futures = "0.3.31"
bytes = "1.10.1"
voicevox-client = { git = "https://github.com/mii443/rust" }

[dependencies.uuid]
version = "0.8"
features = ["serde", "v4"]

[dependencies.songbird]
version = "0.5"
features = ["builtin-queue"]

[dependencies.symphonia]
version = "0.5"
features = ["mp3"]

[dependencies.serenity]
version = "0.12"
features = [
    "builder",
    "cache",
    "client",
    "gateway",
    "model",
    "utils",
    "unstable_discord_api",
    "collector",
    "rustls_backend",
    "framework",
    "voice",
]


[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]
